--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
         "tailwindcss": "^3.2.1",
         "vite": "^5.0",
         "vue": "^3.4.0"
+    },
+    "dependencies": {
+        "@primevue/themes": "^4.0.7",
+        "primevue": "^4.0.7"
     }
 }
