--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@fortawesome/free-solid-svg-icons": "^6.6.0",
         "@fortawesome/vue-fontawesome": "^3.0.8",
         "@primevue/themes": "^4.0.7",
+        "chart.js": "^4.4.4",
         "primevue": "^4.0.7"
     }
 }
